--- a/how-much-you-would-earn/src/App.css
+++ b/how-much-you-would-earn/src/App.css
@@ -1,38 +1,32 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.navbar-brand, .navbar-brand:hover{
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.form-select{
+  width: 250px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.spinner-border{
+  width: 150px;
+  height: 150px;
+  font-size: 50px;
+  position: absolute;
+  top: 40%;
+}
+
+.main-form{
+  width: 400px;
+  margin-left: 400px;
+  margin-top: 30px;
+  padding: 20px 50px 150px 50px;
+  border-radius: 10px;
+}
+
+.form-label{
+  color:#fff;
+}
+
+.percent-text{
+  margin-top: 40px;
+  color: #fff;
 }
